--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
+    "vite": "^7.2.2",
     "vite-plugin-monaco-editor": "^1.1.0"
   },
   "dependencies": {
+    "handsontable": "^16.1.1",
     "hyperformula": "^3.1.0",
-    "monaco-editor": "^0.54.0"
+    "monaco-editor": "^0.53.0"
   }
 }
-
-
-
-
