Refactor to monorepo structure: packages/harbor-core and apps/harbor-vscode

--- a/apps/harbor-vscode/tsconfig.json
+++ b/apps/harbor-vscode/tsconfig.json
@@ -10,8 +10,17 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "@harbor/core": ["../../packages/harbor-core/src"]
+    }
   },
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["node_modules", ".vscode-test"],
+  "references": [
+    {
+      "path": "../../packages/harbor-core"
+    }
+  ]
 }
 
