--- a/apps/harbor-vscode/package.json
+++ b/apps/harbor-vscode/package.json
@@ -51,8 +51,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "handsontable": "^16.1.1",
-    "hyperformula": "^3.1.0"
+    "@harbor/core": "*"
   }
 }
 
