--- a/apps/harbor-vscode/package.json
+++ b/apps/harbor-vscode/package.json
@@ -35,9 +35,11 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "npm run compile && npm run bundle",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
+    "bundle": "esbuild media/main.js --bundle --outfile=media/bundle.js --format=iife --global-name=HarborFormulas",
+    "bundle:watch": "esbuild media/main.js --bundle --outfile=media/bundle.js --format=iife --global-name=HarborFormulas --watch",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
@@ -47,11 +49,14 @@
     "@types/node": "20.x",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "esbuild": "^0.19.0",
     "eslint": "^8.0.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@harbor/core": "*"
+    "@harbor/core": "*",
+    "handsontable": "^16.1.1",
+    "hyperformula": "^3.1.0"
   }
 }
 
